force-app/main/default/objects/Collector__c/Collector__c.object-meta.xml
<CustomObject>
    <description>NOT IN USE</description>
    <label>Collector</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Collector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collectors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>