force-app/main/default/objects/Collector__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Claim</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Collectors</relationshipLabel>
    <relationshipName>Collectors_del</relationshipName>
    <type>Lookup</type>
</CustomField>