force-app/main/default/objects/Collector__c/fields/Collectors__c.field-meta.xml
<CustomField>
    <fullName>Collectors__c</fullName>
    <description>**CURRENTLY NOT IN USE**</description>
    <inlineHelpText>Employee collecting on the claim</inlineHelpText>
    <label>Collectors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aamir Abass</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Danish Qadir</fullName>
            </value>
            <value>
                <fullName>Edward Lacey</fullName>
            </value>
            <value>
                <fullName>External Collection</fullName>
            </value>
            <value>
                <fullName>Henry Dar</fullName>
            </value>
            <value>
                <fullName>Shahid Shah</fullName>
            </value>
            <value>
                <fullName>Uzaifa Qadir</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>